# deepagent

./: .env.example  .gitignore  README.md  bank_state_log.json  my_gold_data.json  pyproject.toml  pytest.ini
project_datas/car_embedded/: BYD_24_AR_chunks.json
reports/: 2026年03月14日_monetary_report.txt  2026年03月15日_monetary_report.txt
skills/macro-eco-analysis/: SKILL.md
src/cufel_deepagent/agents/: banker_agent.py  corp_researcher.py  dp_agents.py  macro_reporter.py  prompts.py  work_flow.py
src/cufel_deepagent/create_agents/: banking_agent.py  corp_researching.py  macro_eco.py
src/cufel_deepagent/mcp/: mcp.py
src/cufel_deepagent/mcp/servers/: banker_server.py  gold_server.py  stock_server.py
src/cufel_deepagent/scripts/: report_chunk.py
src/cufel_deepagent/skills/corporate_research/: SKILL.md
src/cufel_deepagent/skills/monetary_market_report/: SKILL.md
src/cufel_deepagent/skills/monetary_market_report/assets/: report_template.md
src/cufel_deepagent/skills/monetary_market_report/references/: macro_indicator.md
src/cufel_deepagent/skills/monetary_market_report/scripts/: get_current_info.py
src/cufel_deepagent/subagents/: register.py  report_agent.py  subagents.py
src/cufel_deepagent/tools/: corp_researcher_tool.py  tools.py
