[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cufel_deepagent"
version = "0.1.0"
description = "一个深度Agent项目示例"
readme = "README.md"
authors = [
    { name = "youmofa", email = "1018418086@qq.com" }
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "akshare>=1.18.38",
    "baostock>=0.8.9",
    "chromadb>=1.5.5",
    "dashscope>=1.25.8",
    "deepagents==0.3.6",
    "exceptiongroup>=1.3.1",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "mcp>=1.25.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.19",
    "unstructured[pdf]>=0.21.5",
]

[tool.setuptools]
packages = ["cufel_deepagent"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# 开发依赖
dev = ["pytest>=7.0", "black>=22.0", "flake8>=4.0"]
test = ["pytest>=7.0"]

# Content Builder Agent 示例所需依赖
examples = [
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

# 所有可选依赖
all = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
cufel_deepagent = "cufel_deepagent.__main__:main"

